# Client-Server-Chat

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  env_setup.sh  vcpkg.json
Pinnacle/: app.py  server.py
demo/: file.csv  httpServer.sql
src/: CMakeLists.txt  PinnacleAll.hpp  PinnacleBinding.cpp  httpServer.hpp  index.html  main.cpp
src/C/: CMakeLists.txt  bmp.h  image.c
src/app/: ws_app.cpp  ws_app.hpp
src/app/back-end/: database.cpp  database.hpp
src/client/: CMakeLists.txt  client.cpp  client.hpp  clientUtils.cpp  clientUtils.hpp  clientWindow.cpp  clientWindow.hpp  main.cpp
src/interface/: apology.html  changePassword.html  createAccount.html  index.html  login.html
src/interface/static/javascript/: addFileRequest.js  deleteFileRequest.js  search.js
src/interface/static/stylesheet/: index.css  login.css
src/interface/storage/: README.md  fileNames.txt
src/python/: client.py
src/server/: CMakeLists.txt  declarations.cpp  declarations.hpp  global.cpp  global.hpp  ignore.txt  main.cpp  server.cpp  server.hpp  serverUtils.cpp  serverUtils.hpp  serverUtilsBindings.cpp  storage.cpp  storage.hpp  tcp_listener.cpp  tcp_listener.hpp  web_server.cpp  web_server.hpp
src/server/back-end/: database.cpp  database.hpp
src/server/database/: CMakeLists.txt  database.cpp  database.hpp  main.cpp
src/server/interface/: interface.cpp  interface.hpp
src/server_api/: sconfig.hpp  tcp_listener.cpp  tcp_listener.hpp  web_server.cpp  web_server.hpp
src/socket/: CMakeLists.txt  socketUtils.cpp  socketUtils.hpp
